# judgeval

./: .gitmodules  .pre-commit-config.yaml  Pipfile  README.md  core.py  demo.py  package-lock.json  package.json  pyproject.toml  test.py  test_local_queue_integration.py  token.json  trace_metadata.json  tracer.py  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-staging.yaml  ci.yaml  lint.yaml  manual-release.yaml  mypy.yaml  notify-docs-update.yaml  release-staging.yaml  release.yaml
docs/: getting_started.mdx  mint.json
docs/alerts/: notifications.mdx
docs/api_reference/: judgment_client.mdx  trace.mdx
docs/changelog/: 2025-04-28.mdx  2025-05-05.mdx  2025-05-12.mdx  2025-05-19.mdx  2025-05-26.mdx
docs/cookbooks/langgraph_cookbooks/: langgraph_human_in_the_loop.mdx  movie_recommendation.mdx
docs/cookbooks/openai_cookbooks/: travel_agent.mdx
docs/evaluation/: data_datasets.mdx  data_examples.mdx  judges.mdx  unit_testing.mdx
docs/evaluation/scorers/: custom_scorers.mdx  faithfulness.mdx  introduction.mdx
docs/integration/: langgraph.mdx
docs/monitoring/: tracing.mdx
examples/basic/: main.py  pyproject.toml
examples/basic-distributed-tracing/: client.py  pyproject.toml  server.py
examples/basic-evaluation/: main.py  pyproject.toml
examples/basic-linked-trace/: main.py  pyproject.toml
examples/basic-tracing/: main.py  pyproject.toml
examples/claude-agent-sdk/: main.py  pyproject.toml
examples/google-adk/: main.py  pyproject.toml
examples/google-adk/my_agent/: __main__.py  agent.py
fumadocs/docs/: .gitignore  README.md  package-lock.json  package.json  source.config.ts
fumadocs/docs/src/: mdx-components.tsx
prototype/: test.py
prototype/core/: tracer.py
scripts/: api_generator.py  api_generator_v1.py  openapi_transform.py  update_types.sh
src/: .coveragerc  main.py  model.py  openapi.json  openapi_new.json  transform.py  update_types.sh
src/demo/: async_example.py  client_wrap.py  customer_id_and_tags.py  demo_function_call_tokens.py  fibonacci_demo.py  flow_visualizer.html  langgraph_demo.py  sequence_test.py  simple_trace.py  test_file.py  test_tool_metrics.py  trace_tags_demo.py  ui_tracing_example.py  vision_breakdown_demo.py
src/demo/custom_scorer/: scorer.py
src/demo/human_in_the_loop/: human_in_the_loop.py
src/demo/multi_agent/: multi_agent.py  tests.yaml  tests2.yaml
src/demo/simple_agent/: simple_agent.py  tests.yaml
src/e2etests/: conftest.py  test.py  test_all_scorers.py  test_custom_judges.py  test_custom_scorers.py  test_dataset_operations.py  test_eval_operations.py  test_judgee_traces_update.py  test_judgee_update.py  test_langgraph.py  test_litellm.py  test_prompt_scorer.py  test_prompt_scoring.py  test_prompts.py  test_requests_backoff.py  test_rules_alerts.py  test_s3_trace_saving.py  test_tracer.py  utils.py
src/examples/demo/: anthropic_token_count_example.py
src/judgeval/: __init__.py  background_queue.py  cli.py  clients.py  constants.py  dataset.py  env.py  evaluation_run.py  exceptions.py  generate_models.sh  judgeval.py  judgment_attribute_keys.py  judgment_client.py  local_eval_queue.py  logger.py  rules.py  run_evaluation.py  trace_run.py  version.py
src/judgeval/agent_judges/: __init__.py  agent_judge.py  agent_judge_factory.py
src/judgeval/api/: __init__.py  api_types.py
src/judgeval/cli/: __init__.py  upload_judge.py  utils.py
src/judgeval/common/: __init__.py  logger.py  object_flow_tracer.py  object_tracer.py  tracer.py  tracer_old.py  utils.py
src/judgeval/data/: __init__.py  api_example.py  custom_example.py  evaluation_run.py  example.py  judgment_types.py  openapi_new.json  openapi_transform.py  result.py  scorer_data.py  scoring_result.py  sequence.py  sequence_run.py  tool.py  trace.py  trace_run.py
src/judgeval/dataset/: __init__.py
src/judgeval/datasets/: __init__.py  dataset.py  dataset_factory.py
src/judgeval/evaluation/: __init__.py  evaluation.py  evaluation_base.py  evaluation_factory.py  hosted_evaluation.py  local_evaluation.py
src/scripts/: filter-spec.py  model.py  openapi-judgeval.json
src/tests/: conftest.py  test_client.py  test_encoder.py
(+989 files in other folders)
