[project]
name = "judgeval"
version = "0.0.0"
authors = [
    { name="Andrew Li", email="andrew@judgmentlabs.ai" },
    { name="Alex Shan", email="alex@judgmentlabs.ai" },
    { name="Joseph Camyre", email="joseph@judgmentlabs.ai" },
]
description = "Judgeval Package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE.md"]
dependencies = [
    "litellm>=1.61.15",
    "python-dotenv==1.0.1",
    "requests",
    "pandas",
    "openai",
    "together",
    "anthropic",
    "nest-asyncio",
    "langchain-huggingface",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-core",
    "google-genai",
    "boto3",
    "matplotlib>=3.10.3",
    "python-slugify>=8.0.4",
    "datamodel-code-generator>=0.31.1",
    "openpipe-art[backend]==0.3.11.post2",
    "gql<4",
    "setproctitle>=1.3.6",
    "tblib>=3.1.0",
    "polars>=1.31.0",
    "wandb>=0.21.0",
    "weave>=0.51.56",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "dotenv>=0.9.9",
]

[project.urls]
Homepage = "https://github.com/JudgmentLabs/judgeval"
Issues = "https://github.com/JudgmentLabs/judgeval/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judgeval"]
include = [
    "/src/judgeval",
    "/src/judgeval/**/*.py",
]

[dependency-groups]
dev = [
    "chromadb>=1.0.12",
    "langchain-community>=0.3.24",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "tavily-python>=0.7.5",
    "langgraph>=0.4.3",
    "pre-commit>=4.2.0",
    "types-requests>=2.32.4.20250611",
]

[tool.hatch.build]
directory = "dist"
artifacts = [
    "src/judgeval/**/*.py",
]
exclude = [
    "src/e2etests/*",
    "src/tests/*",
    "src/demo/*"
]

[tool.ruff]
exclude = ["docs"]

[tool.uv]
# Handle platform compatibility for packages without macOS ARM64 wheels
override-dependencies = [
    "bitsandbytes; sys_platform != 'darwin'",
    "xformers; sys_platform != 'darwin'",
    # Pin protobuf to a version that satisfies both unsloth-zoo and opentelemetry requirements
    "protobuf>=3.20.0,<4.0.0",
    # Pin opentelemetry packages to older versions that work with protobuf <4.0.0
    "opentelemetry-proto==1.26.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.26.0", 
    "opentelemetry-exporter-otlp-proto-http==1.26.0",
    "opentelemetry-exporter-otlp-proto-common==1.26.0",
]
