[project]
name = "judgeval"
version = "0.0.0"
authors = [
    { name = "Andrew Li", email = "andrew@judgmentlabs.ai" },
    { name = "Alex Shan", email = "alex@judgmentlabs.ai" },
    { name = "Joseph Camyre", email = "joseph@judgmentlabs.ai" },
]
description = "Judgeval Package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE.md"]

dependencies = [
    "dotenv",
    "httpx>=0.28.1",
    "litellm>=1.61.15",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "orjson>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/JudgmentLabs/judgeval"
Issues = "https://github.com/JudgmentLabs/judgeval/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judgeval"]
include = ["/src/judgeval", "/src/judgeval/**/*.py"]

[project.optional-dependencies]
langchain = [
    "langchain-huggingface",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-core",
]

[dependency-groups]
dev = [
    "anthropic>=0.61.0",
    "datamodel-code-generator>=0.32.0",
    "google-genai>=1.28.0",
    "groq>=0.30.0",
    "langchain-core>=0.3.72",
    "mypy>=1.17.1",
    "openai>=1.99.0",
    "ruff>=0.12.7",
    "together>=1.5.21",
    "types-pyyaml>=6.0.12.20250516",
]


[tool.hatch.build]
directory = "dist"
artifacts = ["src/judgeval/**/*.py"]
exclude = ["src/e2etests/*", "src/tests/*", "src/demo/*"]

[tool.ruff]
exclude = ["docs"]
